<resources>
    <string name="app_name">DuChocolate</string>
    <string name="action_settings">Settings</string>

    <string name="R_layout">hint</string>
    <string name="muno_principal">Muno Principal</string>
    <string name="vendas">Vendas</string>
    <string name="produtos">Produtos</string>
    <string name="gastos">Cliente</string>
    <string name="todo1">TODO</string>
    <string name="inserir">Inserir</string>
    <string name="alterar">Gerir lista de Produtos</string>
    <string name="eleminar">Eleminar</string>
    <string name="todo">TODO</string>
    <string name="menu_das_vendas">Menu </string>
    <string name="produtos_vendidos">   Descrição do Produto Vendido </string>
    <string name="nome_do_cliente">Nome do Cliente</string>
    <string name="data">Data</string>
    <string name="valor">Valor</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="GuardadoSucesso">Dados Guardado com sucesso!!</string>
    <string name="erro_ID_prodotosvendidos">Campos Obrigatórios!!</string>
    <string name="erro_0">Insira número maior que Zero(0)</string>

    <string name="DescriçaoProduto">Descrição do Produto</string>
    <string name="AlterarNomeCliente">Nome de Cliente</string>
    <string name="nomecliente">Nome do Cliente</string>
    <string name="guardaAlterar">Alterar</string>
    <string name="CancelarAleracao">Cancelar</string>

    <string name="DescricaoP">Descrição do Produto</string>
    <string name="nomeclienteE">Nome do Cliente</string>
    <string name="eleminarVendar">Eleminar</string>
    <string name="cancelarEle">Cancelar</string>

    <string name="guardarProdutos">Guardar</string>
    <string name="CencelarinserP">Cancelar</string>
    <string name="NomeProduto">Descrição do Produto</string>
    <string name="quantidadeestoq">Quantidade em Estoque</string>

    <string name="EleminarDProdutos">Descriçaõ do Produto</string>
    <string name="EleminarQuantidadeemE">Quantidade em Estoce</string>
    <string name="AlterarP">Alterar</string>
    <string name="EleminarP">Eleminar</string>
    <string name="CancelarP">Cancelar</string>
    <string name="inserpsungM">Inserir</string>

    <string name="EleminarSucesso">Dados eleminados com sucesso!!</string>
    <string name="AlterarSucesso">Dados alterados com sucesso!!</string>
    <string name="nomeclienteD">Nome do Cliente</string>
    <string name="nomeempresa">Nome da Empresa</string>
    <string name="preço">Preço</string>
    <string name="dataD">Data</string>
    <string name="email">Email</string>
    <string name="inserirDvenda">Guardar</string>
    <string name="canceladvenda">Cancelar</string>
    <string name="Telefone">Telefone</string>

    <string name="EleminarDetalhedV">Eleminar</string>
    <string name="ECancelarDetalhedV">Cancelar</string>
    <string name="datavenda">Data</string>
    <string name="dataV">Data</string>
    <string name="eliminar">eliminar</string>

    <string name="preecha_data">Preencha a data</string>
    <string name="erro_guardar_venda">Erro: Não foi possível guardar a Venda</string>
    <string name="detalhe_venda">Detalhe da venda</string>

    <string name="cancelado">Cancelado!</string>
    <string name="erro_guardar_produto">Erro: Não foi possível guardar a Produto</string>
    <string name="descri_o_do_produto">Descrição do Produto</string>
    <string name="descricaoproduto">Descricaoproduto</string>
    <string name="carlos_ponte">Carlos Ponte</string>
    <string name="nuB">234567356</string>
    <string name="DAT">2/3/19</string>
    <string name="carlosp_gmail_com">carlosp@gmail.com</string>
    <string name="hsabores">HSABORES</string>
    <string name="seco">Seco</string>
    <string name="alterarvendas">Alterar Vendas</string>
    <string name="eleminarvendas">Eleminar Vendas</string>
    <string name="produto_em_estoque_154">Produto em estoque :154</string>
    <string name="valor_3000">Valor :3000</string>
    <string name="menu_p">Menu Produto</string>
    <string name="Gerir_Cliente">Gerir lista de Clientes</string>
    <string name="Eleminarvendas">Gerir lista de Vendas</string>


</resources>
