<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.duchocolate.MainActivity">

    <item
        android:id="@+id/action_inserir"
        android:icon="@drawable/ic_add_black_24dp"
        android:orderInCategory="100"
        android:title="@string/inserir"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_alterar"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/alterar"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_eliminar"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/eliminar"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
