<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".InserirCliente">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ID_NCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nomeclienteD"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ID_EMP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nomeempresa"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ID_PREÇO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/preço"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:targetApi="o" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ID_TELEF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Telefone"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:targetApi="o" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ID_DATA"
        android:layout_width="match_parent"
        android:hint="@string/dataD"
        android:inputType="date"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:clickable="true"
        android:focusable="true"
        tools:targetApi="o" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ID_EMAIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        tools:targetApi="o" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="1dp"
        android:text="@string/descri_o_do_produto"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/endcastanho"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/spinnerProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descricaoproduto"
        ></Spinner>
    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="220dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/buttonstyleith"
        android:textColor="#fff"
        android:layout_marginTop="1dp"
        android:onClick="GuardarDetalhesVenda"
        android:text="@string/inserirDvenda" />

    <Button
        android:id="@+id/button9"
        android:layout_width="220dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/buttonstyleith"
        android:onClick="cancelarDetalhesVenda"
        android:text="@string/canceladvenda"
        android:textColor="#fff" />

</LinearLayout>